--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
+    "@coral-xyz/anchor": "^0.31.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@encifher-js/core": "^1.1.7",
@@ -20,14 +21,13 @@
     "@mui/material": "^6.0.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/themes": "^3.1.4",
-    "@rainbow-me/rainbowkit": "^2.1.5",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@stackr/pointy": "^0.1.5",
-    "@stackso/js-core": "^0.5.11",
     "@tanstack/react-query": "^5.53.1",
     "dotenv": "^16.4.7",
-    "ethers": "^6.13.2",
-    "fhenixjs": "^0.3.0",
-    "fhevmjs": "^0.5.2",
     "framer-motion": "^11.5.4",
     "mongodb": "^6.12.0",
     "next": "14.2.6",
@@ -35,20 +35,15 @@
     "petcrypt-js-lite": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0",
     "react-spinners": "^0.14.1",
     "sonner": "^1.5.0",
-    "urql": "^4.2.1",
-    "viem": "^2.21.1",
-    "wagmi": "^2.12.8"
+    "urql": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.7.7",
-    "fhevm": "https://github.com/RizeLabs/fhevm.git",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
